--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Configure AWS credentials
+      id: creds
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ env.AWS_ROLE }}
         aws-region: ${{ env.AWS_REGION }}
+        output-credentials: true
 
     - name: Generate deployment package
       run: zip -r deploy.zip . -x '*.git*'
@@ -41,6 +43,7 @@ jobs:
     - name: Deploy to EB
       uses: einaregilsson/beanstalk-deploy@v22
       with:
+        aws_session_token: ${{ steps.creds.outputs.aws-session-token }}
         application_name: ${{ env.EB_APP_NAME }}
         environment_name: ${{ env.EB_ENV_NAME }}
         version_label: ${{ github.event.head_commit.message }}
